# Intelligent-User-Interface

./: README.md  playground.ipynb  pyproject.toml
Tutorial 1-20231023/Tutorial 1 Material/: 1-assignment.md  iui_tutorial1_decision-trees.ipynb  titanic_data.csv
