[tool.poetry]
name = "intelligent-user-interface"
version = "0.1.0"
description = "Intelligent user interface created for the assoviated lecture within LMU."
authors = ["Shannah Santucci <shannah.santucci@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pandas = "^2.1.1"
numpy = "^1.26.1"
matplotlib = "^3.8.0"
scikit-learn = "^1.3.2"
graphviz = "^0.20.1"
pydotplus = "^2.0.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
